# cse140l-python

./: .gitignore  Dockerfile  GEMINI.md  MANIFEST.in  README.md  docker-compose.yml  example_config.toml  pyproject.toml  requirements.txt  setup.py
cse140l/: digital.py
cse140l/digital/: stats.py  svg.py  tests.py  wrapper.py
cse140l/gradescope/: autograder_writer.py  test_result.py
cse140l/lab/: config.py  runner.py
cse140l/lab/templates/: header.html.j2
src/cse140l/: log.py
src/cse140l/digital/: images.py  stats.py  svg.py  tests.py  util.py  verilog.py  wrapper.py
src/cse140l/gradescope/: autograder_writer.py  manual_grading.py  test_result.py
src/cse140l/lab/: config.py  runner.py
src/cse140l/lab/templates/: error_table.html.j2  header.html.j2
src/report_server/: report_server.py
src/report_server/templates/: 404.html.j2  404_generic.html.j2  base.html.j2  locked.html.j2  report.html.j2
