[project]
name = "cse140l"
version = "2.1.1"
description = "Autograder System for UCSD CSE 140L"
readme = "README.md"
authors = [
    { name = "Anish Govind", email = "anishg24@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "minify-html>=0.16.4",
    "pydantic>=2.11.9",
    "toml>=0.10.2",
]

[project.scripts]
cse140l = "cse140l.lab.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
