[project]
name = "cse140l"
version = "3.0.0"
description = "Autograder System for UCSD CSE 140L"
readme = "README.md"
authors = [
    { name = "Anish Govind", email = "anishg24@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "minify-html>=0.16.4",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "toml>=0.10.2",
]

[project.scripts]
cse140l = "cse140l.lab.runner:main"
report-server = "report_server.report_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cse140l", "src/report_server"]

[dependency-groups]
dev = [
    "python-dotenv[cli]>=1.1.1",
]
